# quin

./: .gitignore  Cargo.toml  README.md  config.toml  rust-toolchain.toml
.buildkite/: build-pipeline.yml  build-template.yml  test-pipeline.yml  test-template.yml
.cargo/: config.toml
app/: Cargo.toml
app/src/: config.rs  general.rs  main.rs  systems.rs
common/config_loader/: Cargo.toml
common/config_loader/plugin/: Cargo.toml
common/config_loader/plugin/src/: lib.rs
common/config_loader/src/: lib.rs
common/input_model/: Cargo.toml
common/input_model/src/: definition.rs  filter.rs  input.rs  keyboard.rs  lib.rs  mouse.rs
common/input_model/src/views/: definition.rs  mod.rs  text.rs
common/keyboard_layout/: Cargo.toml
common/keyboard_layout/src/: lib.rs
common/komorebi/: Cargo.toml
common/komorebi/src/: applications_config.rs  config.rs  lib.rs
common/sequence_to_event/: Cargo.toml
common/sequence_to_event/src/: lib.rs
common/test_utils/: Cargo.toml
common/test_utils/src/: input_stream.rs  lib.rs
common/toggle/: Cargo.toml
common/toggle/src/: lib.rs
common/ui_elements/: Cargo.toml
common/ui_elements/src/: label.rs
docs/plugins/gui/: README.md
docs/plugins/input/global/: README.md
docs/plugins/input/sequence/: README.md
docs/plugins/keyboard_to_mouse/: README.md
docs/plugins/navigation_grid/: README.md
docs/plugins/output/mouse/: README.md
docs/plugins/tiling_window_manager/: README.md
plugins/gui/plugin/: Cargo.toml
plugins/gui/plugin/src/: lib.rs  plugin.rs
plugins/input/global/api/: Cargo.toml
plugins/input/global/api/src/: filter.rs  input.rs  lib.rs  mouse.rs
plugins/input/global/plugin/: Cargo.toml
plugins/input/global/plugin/src/: lib.rs  plugin.rs  state.rs  systems.rs
plugins/input/global/plugin/tests/: global_input.rs
plugins/input/sequence/api/: Cargo.toml
plugins/input/sequence/api/src/: lib.rs
plugins/input/sequence/plugin/: Cargo.toml
plugins/input/sequence/plugin/src/: lib.rs  plugin.rs  state.rs  systems.rs
plugins/input/sequence/plugin/tests/: lib.rs  sequence_tests.rs
plugins/input_to_gui/plugin/: Cargo.toml
plugins/input_to_gui/plugin/src/: lib.rs
plugins/keyboard_to_mouse/plugin/: Cargo.toml
plugins/keyboard_to_mouse/plugin/src/: config.rs  events.rs  lib.rs  plugin.rs  state.rs  systems.rs
plugins/navigation_grid/: Cargo.toml
plugins/navigation_grid/src/: components.rs  config.rs  events.rs  lib.rs  plugin.rs  systems.rs
plugins/output/mouse/api/: Cargo.toml
plugins/output/mouse/api/src/: lib.rs
plugins/output/mouse/core/: Cargo.toml
plugins/output/mouse/plugin/: Cargo.toml
plugins/output/mouse/plugin/src/: lib.rs  plugin.rs  systems.rs
plugins/output/mouse/plugin/tests/: mouse_output_tests.rs  move_mouse_tests.rs
plugins/overlay/plugin/: Cargo.toml
plugins/overlay/plugin/src/: lib.rs  plugin.rs  systems.rs
plugins/sequence_to_log/plugin/: Cargo.toml
plugins/sequence_to_log/plugin/src/: lib.rs
plugins/tray/api/: Cargo.toml
plugins/tray/api/src/: lib.rs
plugins/tray/plugin/: Cargo.toml
plugins/tray/plugin/src/: lib.rs  plugin.rs  state.rs  systems.rs
plugins/window_manager/: Cargo.toml
plugins/window_manager/src/: config.rs  events.rs  lib.rs  plugin.rs  state.rs  systems.rs
src/: config.rs  core.rs  handlers.rs  lib.rs  main.rs  overlay.rs  poc.rs  registry.rs  translator.rs
src/common/: gui.rs  input_interceptor.rs  keys.rs  mod.rs
src/draft/: grid_mode_poc.rs  hal_poc.rs  legacy_grid_mode_handler.rs  mod.rs  neogrid_mode_handler.rs
src/handlers/: grid_mode_handler.rs
src/plugins/: general.rs  mod.rs
src/plugins/config_loader/: mod.rs
src/plugins/configurator/: mod.rs
src/plugins/exit/: mod.rs
src/plugins/global_input/: events.rs  mod.rs
src/plugins/gui/: mod.rs
src/plugins/input_sequence/: events.rs  mod.rs
src/plugins/input_to_gui/: mod.rs
src/plugins/mouse_emulator/: events.rs  mod.rs
src/plugins/output/mouse/: events.rs  mod.rs  plugin.rs
src/plugins/overlay/: mod.rs
src/plugins/sequence_to_log/: mod.rs
src/plugins/tray/: mod.rs  readme.md  tray_plugin.rs
src/registry/: grid_mode_handler.rs  mb_emulation_handler.rs  neogrid_mode_handler.rs  precise_mode_handler.rs
src/systems/: mod.rs  sequence_to_event.rs
