[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "app"
    , "common/config_loader"
    , "common/toggle"
    , "plugins/output/mouse/api"
    , "plugins/output/mouse/plugin"
    , "plugins/input/global/api"
    , "plugins/input/global/plugin"
    , "plugins/input/sequence/api"
    , "plugins/input/sequence/plugin"
    , "plugins/overlay/plugin"
    , "plugins/keyboard_to_mouse/plugin"
    , "plugins/gui/plugin"
    , "plugins/input_to_gui/plugin"
    , "plugins/sequence_to_log/plugin"
    , "plugins/tray/api"
    , "plugins/tray/plugin"
]


[workspace.dependencies]
config_loader = { path = "common/config_loader" }
toggle = { path = "common/toggle" }
mouse_output_api = { path = "plugins/output/mouse/api" }
mouse_output_plugin = { path = "plugins/output/mouse/plugin" }
global_input_api = { path = "plugins/input/global/api" }
global_input_plugin = { path = "plugins/input/global/plugin" }
input_sequence_api = { path = "plugins/input/sequence/api" }
input_sequence_plugin = { path = "plugins/input/sequence/plugin" }
overlay_plugin = { path = "plugins/overlay/plugin" }
keyboard_to_mouse_plugin = { path = "plugins/keyboard_to_mouse/plugin" }
gui_plugin = { path = "plugins/gui/plugin" }
input_to_gui_plugin = { path = "plugins/input_to_gui/plugin" }
sequence_to_log_plugin = { path = "plugins/sequence_to_log/plugin" }
tray_api = { path = "plugins/tray/api" }
tray_plugin = { path = "plugins/tray/plugin" }

#common
crossbeam = "0.8.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }

# bevy
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_egui = "0.27.0"
bevy-persistent = { version = "0.5.0", features = ["json", "pretty"] }

# input/output
rdev = { version = "0.5.3", features = ["unstable_grab"] }
enigo = "0.1"

# other
image = "0.25"
tray-icon = "0.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
