[package]
name = "quin"
version.workspace = true
edition.workspace = true

[dependencies]
config_loader = { workspace = true }
sequence_to_log_plugin = { workspace = true }
tray_plugin = { workspace = true }
global_input_plugin = { workspace = true }
input_sequence_plugin = { workspace = true }
overlay_plugin = { workspace = true }
gui_plugin = { workspace = true }
keyboard_to_mouse_plugin = { workspace = true }
navigation_grid = { workspace = true}
mouse_output_plugin = { workspace = true }

serde = { workspace = true }
bevy = { workspace = true }
