[package]
name = "keyboard_to_mouse_plugin"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
global_input_api = { workspace = true }
config_loader_plugin = { workspace = true }
input_sequence_api = { workspace = true }
mouse_output_api = { workspace = true }
input_model = { workspace = true }
sequence_to_event = { workspace = true }
