[package]
name = "keyboard_to_mouse_plugin"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
global_input_api = { workspace = true }
config_loader = { workspace = true }
toggle = { workspace = true }
keyboard_layout = { workspace = true }
input_sequence_api = { workspace = true }
input_sequence_plugin = { workspace = true }
mouse_output_api = { workspace = true }
